--- a/Bericht/Entwicklung_Webserver.tex
+++ b/Bericht/Entwicklung_Webserver.tex
@@ -19,7 +19,7 @@ Im letzten Schritt musste nun der heimische Router so konfiguriert werden, dass 
 Zusätzlich haben wir die Software „VNC Server“ auf dem Raspberry Pi installiert. Mit Hilfe dieser Software und dem entsprechenden Client „VNC Viewer“ auf einem PC oder Laptop kann eine Remotedesktopverbindung zum Raspberry Pi hergestellt werden. Dies ist besonders  in Zeiten von Lockdowns und  digitalen Remotearbeiten eine wichtige Funktion, da sich so jedes Gruppenmitglied auf dem Raspberry Pi schalten kann.
 
 \subsection{Probleme mit dem Raspberry Pi}
-Während der ersten Wochen der Projektarbeit mussten wir leider alle paar Tage feststellen, dass keine Verbindung per VNC zum Raspberry Pi hergestellt werden konnte. Wir vermuteten zunächst keinen dramatischen Fehler, denn nach einem Neustart funktionierte wieder alles. Dieser Fehler trat allerdings doch mit einer gewissen Regelmäßigkeit auf und nachdem ein erstes PHP-Skript auf unserem Webserver lief, konnten wir feststellen, dass auch  dieses  regelmäßig nicht erreichbar war. Der Fehler lag also eindeutig nicht  an der VNC-Software, sondern es scheint generelle Internet-Verbindungsprobleme des Raspberry Pi zu geben.
+Während der ersten Wochen der Projektarbeit mussten wir leider alle paar Tage feststellen, dass keine Verbindung per VNC zum Raspberry Pi hergestellt werden konnte. Wir vermuteten zunächst keinen dramatischen Fehler, denn nach einem Neustart funktionierte wieder alles. Dieser Fehler trat allerdings doch mit einer gewissen Regelmäßigkeit auf und nachdem ein erstes PHP-Skript auf unserem Webserver lief, konnten wir feststellen, dass auch  dieses  regelmäßig nicht erreichbar war. Der Fehler lag also eindeutig nicht  an der VNC-Software, sondern es scheint generelle Internet Verbindungsprobleme des Raspberry Pi zu geben.
 \\
 \\
 Deshalb versuchten wir doch genauer herauszufinden, wo der Ursprung des Verbindungsverlustes liegt. Nach einigem Recherchieren und dem Sichten diverser Log-Files auf dem Raspberry Pi, konnten wir die Fehlermeldung \textit{„brcmf\_cfg80211\_scan: scan error (-110)“} für die Verbindungsabbrüche ausfindig machen. Bei diesem Fehler handelt es sich um ein Verbindungsproblem des WiFis des Raspberry Pi’s. Dieser Fehler ist nicht unbekannt und mögliche Lösungen werden in diversen Internetforen diskutiert. Allerdings scheint keine der vorgeschlagenen Workarounds generell zu funktionieren, außer ein wie auch von uns praktiziertes, regelmäßiges Neustarten. Bevor wir diese alle ausprobieren und im ungünstigsten Fall eine Menge Zeit ohne Ergebnis verschwenden würden, entschlossen wir uns einfach dazu, den Raspberry Pi per LAN-Kabel direkt mit der Fritz!Box zu verbinden. Nachdem dann auch nach über zwei Wochen keine Verbindungsabbrüche registriert wurden, konnten wir dieses Problem als gelöst ansehen und uns wieder anderen Aufgaben des Projekts widmen.
@@ -35,7 +35,7 @@ Auch wenn der GPS-Sensor am Arduino neben den Längen- und Breitengraden noch vi
 Sowohl die Daten, die der Arduino an den Webserver übermittelt als auch die Daten, die der Webserver für die Apps wieder bereitstellt, sollen im JSON-Format\footnote{JSON = JavaScript Object Notation} übertragen werden. Dieses Format ist einerseits leicht lesbar und andererseits ist es unabhängig von Programmiersprachen und somit universell nutzbar.
 \\
 \\
-Über mögliche Sicherheitsaspekte unserer Datenübertragung dachten wir anfangs nicht wirklich nach, da eine an sich funktionierende Kommunikation zwischen den verschiedenen Teilnehmern erst einmal im Vordergrund stand. Lediglich die Überlegung, wie man verhindern kann, dass nicht jeder beliebige Internetnutzer irgendwelche Daten an unseren Webserver schickt, beschäftigte uns am Anfang des Projekts. Es lässt sich natürlich nicht verhindern, dass andere Geräte versehentlich oder auch absichtlich irgendwelche Daten an unseren Webserver beziehungsweise an ein dort laufendes PHP-Skript senden. Aber wir können dieses Skript so programmieren, dass nur bestimmte empfangene Daten auch weiterverarbeitet werden. Um dies zu realisieren, muss jedes Gerät eine von uns manuell vergebenen Geräte-Identifikationscode (\textit{Geräte-ID}) zusammen mit den Nutzdaten verschicken. Diese Geräte-IDs sind 20-stellige, alphanumerische Werte, die wir einmal zufällig generiert haben und die in der txt-Datei \textit{„allowed\_devices.txt“} lokal auf dem Raspberry Pi gespeichert sind. So kann später darauf zugegriffen werden und ein Abgleich erfolgen, ob die mitgesendete Geräte-ID bei uns bekannt ist. Wenn dies nicht der Fall ist, sollen diese Daten nicht weiterbearbeitet werden.
+Über mögliche Sicherheitsaspekte unserer Datenübertragung dachten wir anfangs nicht wirklich nach, da eine an sich funktionierende Kommunikation zwischen den verschiedenen Teilnehmern erst einmal im Vordergrund stand. Lediglich die Überlegung, wie man verhindern kann, dass nicht jeder beliebige Internetnutzer irgendwelche Daten an unseren Webserver schickt, beschäftigte uns am Anfang des Projekts. Es lässt sich natürlich nicht verhindern, dass andere Geräte versehentlich oder auch absichtlich irgendwelche Daten an unseren Webserver beziehungsweise an ein dort laufendes PHP-Skript senden. Aber wir können dieses Skript so programmieren, dass nur bestimmte empfangene Daten auch weiterverarbeitet werden. Um dies zu realisieren, muss jedes Gerät eine von uns manuell vergebenen Geräte-Identifikationscode\footnote{nachfolgend Geräte-ID} zusammen mit den Nutzdaten verschicken. Diese Geräte-IDs sind 20-stellige, alphanumerische Werte, die wir einmal zufällig generiert haben und die in der txt-Datei \textit{„allowed\_devices.txt“} lokal auf dem Raspberry Pi gespeichert sind. So kann später darauf zugegriffen werden und ein Abgleich erfolgen, ob die mitgesendete Geräte-ID bei uns bekannt ist. Wenn dies nicht der Fall ist, sollen diese Daten nicht weiterbearbeitet werden.
 \\
 \\
 Es ist klar, dass auch diese Sicherheitsvorkehrung nicht besonders stark ist, solange die Geräte-IDs unverschlüsselt und quasi frei zugänglich auf dem Server gespeichert sind. Aber es ist ein erstes Mittel, um zumindest einfache Störversuche zu unterbinden und auch uns selbst vor möglichen Übertragungsfehlern zu schützen.
@@ -83,7 +83,11 @@ In der nachfolgenden Abbildung\ref{server-pap} ist der grundsätzliche Programma
 Nachdem das Skript „get\_Data.php“ in einem funktionsfähigen Zustand war und auch das Testen mit dem Python-Programm „Senden.py“ keine Fehler ergab, konnte zum nächsten Entwicklungsschritt übergegangen werden. Dieser besteht darin, die Kommunikation vom Arduino über das GSM-Modul zum Webserver herzustellen, sodass dort die gesendeten Daten auch weiterverarbeitet werden können.
 \\
 \\
-Im Prinzip müssen im Programm auf dem Arduino nur die Koordinaten ins JSON-Format angeordnet werden und per http-POST an die URL \textit{„http://retrorbit.spdns.de/get\_Data.php“} gesendet werden. Es erforderte einige Versuche, bis das überhaupt funktionierte, allerdings konnten die Daten auf dem Webserver nicht richtig verarbeitet werden. Dies äußerte sich darin, dass in der Datei „Koordinaten.txt“ für Latitude und Longitude der Wert „null“ eingetragen war. Das Auslesen der Daten mittels POST auf der Seite des Webservers hat also nicht funktioniert. Die Ursache hierfür lag bei der Datenformatierung des Arduinos bzw. dem AT-Befehl zum Senden der Daten via GSM. Dabei werden die Daten immer als String versendet unabhängig von der ursprünglichen Form, welche dann als String angesehen wird. Deshalb funktionierten im PHP-Skript die \$\_POST Befehle für die einzelnen Parameter nicht mehr.
+Im Prinzip müssen im Programm auf dem Arduino nur die Koordinaten ins JSON-Format angeordnet werden und per http-POST an die URL
+\begin{center}
+	\textit{„http://retrorbit.spdns.de/get\_Data.php“}
+\end{center}
+ gesendet werden. Es erforderte einige Versuche, bis das überhaupt funktionierte, allerdings konnten die Daten auf dem Webserver nicht richtig verarbeitet werden. Dies äußerte sich darin, dass in der Datei „Koordinaten.txt“ für Latitude und Longitude der Wert „null“ eingetragen war. Das Auslesen der Daten mittels POST auf der Seite des Webservers hat also nicht funktioniert. Die Ursache hierfür lag bei der Datenformatierung des Arduinos bzw. dem AT-Befehl zum Senden der Daten via GSM. Dabei werden die Daten immer als String versendet unabhängig von der ursprünglichen Form, welche dann als String angesehen wird. Deshalb funktionierten im PHP-Skript die \$\_POST Befehle für die einzelnen Parameter nicht mehr.
 \\
 \\
 Mit diesem Wissen wurde das „get\_Data.php“ Skript nochmals angepasst und als „get\_Data2.php“ abgespeichert. Dieses ist im Prinzip genauso aufgebaut wie die ursprüngliche Version, jedoch wurden die einzelnen \$\_POST Befehle gegen einen normalen Arraybezeichner (\$POST\_data) ausgetauscht. Dafür wird nach den Deklarationen der Dateinamen in Codezeile 6 \textit{(siehe Anhang)} mit nur einem  \$\_POST der vom Arduino gesendete String ausgelesen und in der Variable \$Arduino\_Daten gespeichert. Es folgt eine JSON-Decodierung, sodass nun die einzelnen Parameter (\textit{Geräte-ID und die beiden Koordinaten}) im Array \$POST\_data gespeichert und referenzierbar sind. Der Zugriff auf die einzelnen Werte geschieht jetzt also nicht mehr über die \$\_POST Befehle, sondern per Referenzierung auf das Array.
