--- a/Bericht/Projektdokumentation.tex
+++ b/Bericht/Projektdokumentation.tex
@@ -32,7 +32,7 @@ Allein in Deutschland wurden laut dem ADAC im Jahr 2020 \textbf{10.697} kaskover
 Im Rahmen des Gruppenabschlussprojektes im Master Informations- und Kommunikationstechnik haben wir uns daher dafür entschieden, ein System zu entwickeln, welches besonders Haltern von älteren Fahrzeugmodellen, die oft überhaupt nicht mit modernen Security Systemen ausgestattet sind, ein sichereres Gefühl vermitteln soll. Eines unserer Gruppenmitglieder ist zudem direkt von dieser Problematik betroffen, weshalb wir besonders motiviert an die Umsetzung dieses Projektes herangegangen sind und uns so ein Stückweit der Kriminalität entgegenstellen wollen.
 \\
 \\
-Der Fokus des Moduls Projekt Netzbasierte Systeme liegt  auf Informatik, Kommunikations- und  Nachrichtentechnik. Daher basiert das hier beschriebene und realisierte Projekt auf unterschiedlichen, miteinander agierenden Technologien aus dem Hard- und Softwaresegment. Ein weiterer Schwerpunkt war, das entstehende Produkt nicht nur technisch zu entwickeln, sondern auch aus der sichtweise des Projektmanagements. Dafür wurden neue Methoden im Laufe des Moduls wie beispielsweise Design-Thinking kennengelernt und umgesetzt.
+Der Fokus des Moduls Projekt Netzbasierte Systeme liegt  auf Informatik, Kommunikations- und  Nachrichtentechnik. Daher basiert das hier beschriebene und realisierte Projekt auf unterschiedlichen, miteinander agierenden Technologien aus dem Hard- und Softwaresegment. Ein weiterer Schwerpunkt war, das entstehende Produkt nicht nur technisch zu entwickeln, sondern auch aus der Sichtweise des Projektmanagements. Dafür wurden neue Methoden im Laufe des Moduls wie beispielsweise Design-Thinking kennengelernt und umgesetzt.
 \\
 \\
 Das nachfolgend beschriebene Projekt - gerne auch kurz  Schrödingers Alarm genannt, welches von Seifeddine Mhiri, Lucas Hanisch, Paul Krause und Monique Golnik umgesetzt wird, sieht die Implementierung eines vernetzten Systems bestehend aus Arduino, Raspberry Pi und Smartphone und somit die Kommunikation dieser Module untereinander vor.
@@ -64,8 +64,7 @@ Das nachfolgend beschriebene Projekt - gerne auch kurz  Schrödingers Alarm gena
 	Für die Versionierung der Fortschritte sowie ein vereinfachtes Zusammenarbeiten auf Distanz haben wir das Versionsverwaltungstool Git genutzt - hier ist auch der Code für den Webserver, Arduino und die Apps einzusehen. Der Übersicht halber haben wir darauf verzichtet diesen in der Dokumentation extra aufzuführen. 
 	\\
 	\\
-	Das öffentliche Git-Repository ist hier zu finden:
-	\\ \textit{https://github.com/MiN0DE/SchroedingersAlarm}
+	Öffentliches Git-Repository : \textit{https://github.com/MiN0DE/SchroedingersAlarm}
 	\section{Videos}
 	Android-App: \textit{https://www.youtube.com/watch?v=\_CBTdDctr2k}
 	\\
