--- a/Bericht/Zielsetzung.tex
+++ b/Bericht/Zielsetzung.tex
@@ -14,7 +14,7 @@
 
 
 
-Das entstehende Produkt soll nicht nur die Problematik des Autodiebstahls verringern, sondern zusätzlich Faktoren wie Nutzerfreundlichkeit, Anschaffungs- und Wartungskosten sowie Nachhaltigkeit berücksichtigen. Des Weiteren möchten wir dank moderner Managementtechniken ein Verständnis erlangen, was es bedeutet, ein Produkt von einem Gedanken heraus zu entwerfen und zu entwickeln. Ebenfalls war es uns wichtig, dass wir uns mit Themenbereichen beschäftigen, die neu sind aber in denen wir uns gern einmal einarbeiten oder weiterentwickeln wollen - kurz: die persönlichen Interessen jedes Teammitgliedes sollten zusätzlich zu den zuvor genannten Faktoren berücksichtigt werden.
+Das entstehende Produkt soll nicht nur die Problematik des Autodiebstahls verringern, sondern zusätzlich Faktoren wie Nutzerfreundlichkeit, Wartungs- und Anschaffungskosten sowie Nachhaltigkeit berücksichtigen. Des Weiteren möchten wir dank moderner Managementtechniken ein Verständnis erlangen, was es bedeutet, ein Produkt von einem Gedanken heraus zu entwerfen und zu entwickeln. Ebenfalls war es uns wichtig, dass wir uns mit Themenbereichen beschäftigen, die neu sind aber in denen wir uns gern einmal einarbeiten oder weiterentwickeln wollen - kurz: die persönlichen Interessen jedes Teammitgliedes sollten zusätzlich zu den zuvor genannten Faktoren berücksichtigt werden.
 \\
 \\
 Dank der Methode Design-Thinking war es uns möglich, unsere vielen Ideen zu filtern, zu fokussieren oder zu verwerfen. Hierbei gilt es sich nacheinander an den fünf Phasen
